src/assets/css/App.css
/* ... */
.modal-photo {
	margin-top: 50px;
}
.modal-data-title {
	background-color: #fff !important;
	color: gray !important;
	font-family: kepler-std-display;
	font-weight: 100;
	letter-spacing: 4px;
}
.modal-data-text {
	color: gray;
	font-size: 14px;
	line-height: 0.8;
}

.ant-modal-content {
	border-radius: 0px !important;
}
.footer-logo {
	width: 200px;
	margin: auto;
}
.footer-text {
	background-color: #fff !important;
	color: gray !important;
	font-family: kepler-std-display;
	font-weight: 100;
	font-size: 13px;
	line-height: 22px;
	letter-spacing: 4px;
	text-align: center;
	margin-top: 30px;
}
.ant-tooltip-inner {
	border-radius: 0px !important;
}
.ant-modal-close {
	display: none;
}
/* Contact Page */
.contact-main-header {
	color: #1d4a63;
	font-family: proxima-nova, sans-serif;
	font-style: normal;
	font-weight: 900;
	font-size: 9vw;
	opacity: 0.8;
	padding-left: 50px;
	padding-reft: 50px;
	margin-top: 150px;
}
.contact-sub-header {
	font-size: 1.9vw;
	font-family: kepler-std-display;
	letter-spacing: 4px;
	color: #1d4a63;
}

.contact-sub-info {
	font-size: 1.9vw;
	font-family: kepler-std-display;
	color: #fff;
}

.map-overlay {
	background-color: #a3a098;
	opacity: 0.9;
	height: 100%;
	width: 50%;
	float: right;
	background-origin: center;
	background-size: contain;
}
.map-actual-size {
	width: 97%;
	height: 97.2%;
	position: absolute;
	top: 1.3%;
	left: 1.4%;
}
.mobile-heading {
	display: none;
}

@media screen and (max-width: 991px) {
	.map-overlay {
		width: 100%;
		height: auto;
		position: relative;
		top: 100%;
		left: 50%;
		transform: translate(-50%, -100%);

		/* Backward compatibility */
		-webkit-transform: translate(-50%, -100%);
		-moz-transform: translate(-50%, -100%);
		-o-transform: translate(-50%, -100%);
		-ms-transform: translate(-50%, -100%);
	}
	.map-actual-size {
		position: static;
		width: 100%;
		height: auto;
	}
	.map-info {
		top: 0px !important;
		left: 0px !important;
	}
	.mobile-heading {
		display: block;
		color: #1d4a63;
		font-family: 'Montserrat';
		font-weight: 800;
		font-size: 6vw;
		opacity: 0.8;
		text-align: center;
		padding-top: 70px;
		margin-bottom: -40px;
	}
	.contact-main-header {
		margin-top: 0px;
		font-size: 70px;
		padding-left: 30px;
	}
	.contact-sub-header {
		font-size: 18px;
	}
	.contact-sub-info {
		font-size: 18px;
	}
	.icon-square {
		height: 60px;
		width: 60px;
		padding: 5px;
		top: 0px;
		right: 60px;
		border: 1px solid #dddddd;
	}
	.hamburger-square {
		height: 60px;
		width: 60px;
		padding: 20px;
		padding-top: 22.5px;
		top: 0px;
		right: 0px;
	}
	.menu {
		width: 240px;
		position: absolute;
		top: 60px;
		transition: 0.3s;
		-webkit-transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
		transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
		right: 0px;
		left: auto;
	}
	.menu-collapsed {
		right: -300px;
		left: auto;
	}
	.footer-right {
		margin-right: 0px;
	}
	.footer-left {
		margin-left: 0px;
	}
	.right {
		text-align: center;
	}
	.left {
		text-align: center;
	}
	.portfolio-block-outer {
		height: auto !important;
	}
	.portfolio-block {
	}
	.portfolio-text-block {
		margin-bottom: 160px;
		margin-top: 20px;
		height: auto;
	}
	.portfolio-block-left {
		margin-bottom: 70px;
	}
	.visible-mobile {
		display: block !important;
	}
}
@media only screen and (max-width: 768px) {
	.home-hero-intro {
		font-size: 22px;
	}
	.home-hero-title {
		font-size: 75px;
	}
	.icon-square {
		width: 100vw;
		right: 0;
		height: 120px;
	}
	.icon-square img {
		margin: auto;
		margin-top: 18px;
	}
	.menu {
		width: 100vw !important;
		margin-top: 60px;
	}
	.menu-collapsed {
		width: 0px !important;
	}
}
.visible-mobile {
	display: none;
}
.location-box {
	position: absolute;
	background-color: white;
	height: 120px;
	width: 230px;
	left: calc(50% - 115px);
	z-index: 9999;
	border: 1px solid lightgrey;
	border-top: none;
}
.location-box h3 {
	font-size: 15px;
	margin-top: 17px;
	margin-bottom: 4px;
	text-align: center;
	font-family: kepler-std-display;
	letter-spacing: 4px;
	color: #1d4a63;
}
.location-box h2 {
	font-size: 35px;
	line-height: 25px;
	text-align: center;
	font-family: kepler-std-display;
	color: #1d4a63;
}
.location-box p {
	margin-top: 10px;
	font-size: 15px;
	text-align: center;
	font-family: kepler-std-display;
	color: gray;
}
.location-box span {
	color: lightgrey;
}

@media screen and (min-width: 1200px) {
	.contact-main-header {
	}
	.contact-sub-header {
		font-size: 25px;
	}

	.contact-sub-info {
		font-size: 20px;
	}
}

/* Firm Overview Page */
.paragraph-padding {
	padding-top: 30px;
}

.anchor-menu {
	display: none;
}
@media screen and (min-width: 991px) {
	.firmoverview-leaves {
		margin-top: -280px;
	}
	.firmoverview-environment {
		padding-top: 50px;
	}
}

.company-fancy-icon {
	-webkit-animation-name: spin;
	-webkit-animation-duration: 16000ms;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: linear;
	-moz-animation-name: spin;
	-moz-animation-duration: v;
	-moz-animation-iteration-count: infinite;
	-moz-animation-timing-function: linear;
	-ms-animation-name: spin;
	-ms-animation-duration: 16000ms;
	-ms-animation-iteration-count: infinite;
	-ms-animation-timing-function: linear;

	animation-name: spin;
	animation-duration: 16000ms;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
}
@-ms-keyframes spin {
	from {
		-ms-transform: rotate(0deg);
	}
	to {
		-ms-transform: rotate(360deg);
	}
}
@-moz-keyframes spin {
	from {
		-moz-transform: rotate(0deg);
	}
	to {
		-moz-transform: rotate(360deg);
	}
}
@-webkit-keyframes spin {
	from {
		-webkit-transform: rotate(0deg);
	}
	to {
		-webkit-transform: rotate(360deg);
	}
}
@keyframes spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}
.paragraph-emphasis span {
	font-size: 21px !important;
}
.paragraph-emphasis {
	font-size: 27px !important;
}
/* ... */

